--- a/db.erb
+++ b/db.erb
@@ -20,7 +20,7 @@ www	IN	A	192.168.1.1
 
 mail	IN	A	192.168.1.2
 
-<% for name in @namelist do -%>
+<% for name in $namelist do -%>
 <% if /#{soa}$/ =~ name.chomp -%>
 <%= name.chomp %> IN A 192.168.1.<%= rand(254) %>
 <% end -%>
